main/default/objects/Quote_Version_Item__c/Quote_Version_Item__c.object-meta.xml
<CustomObject>
    <label>Quote Version Item</label>
    <nameField>
        <displayFormat>QV-{0000}</displayFormat>
        <label>Quote Version Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Version Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>