main/default/objects/Quote_Version_Item__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <label>Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>