main/default/objects/Quote_Version_Item__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>