main/default/objects/Quote_Version_Item__c/fields/Quote_Version__c.field-meta.xml
<CustomField>
    <fullName>Quote_Version__c</fullName>
    <label>Quote Version</label>
    <referenceTo>Quote_Version__c</referenceTo>
    <relationshipLabel>Quote Version Items</relationshipLabel>
    <relationshipName>Quote_Version_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>