main/default/objects/Quote_Version_Item__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <length>254</length>
    <type>Text</type>
</CustomField>